--- a/_docker/docker-compose.yaml
+++ b/_docker/docker-compose.yaml
@@ -1,17 +1,17 @@
 version: '3.8'
 
 services:
-  db:
-    image: postgres:15.1
-    ports:
-      - ${POSTGRES_BIND}:5432
-    environment:
-      POSTGRES_DB: ${POSTGRES_NAME}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    env_file: .env
-    volumes:
-      - db_data:/var/lib/postgresql/data
+  # db:
+  #   image: postgres:15.1
+  #   ports:
+  #     - ${POSTGRES_BIND}:5432
+  #   environment:
+  #     POSTGRES_DB: ${POSTGRES_NAME}
+  #     POSTGRES_USER: ${POSTGRES_USER}
+  #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+  #   env_file: .env
+  #   volumes:
+  #     - db_data:/var/lib/postgresql/data
 
   keycloak:
     image: quay.io/keycloak/keycloak:22.0.0
@@ -28,5 +28,5 @@ services:
     command: start-dev
 
 volumes:
-  db_data:
+  # db_data:
   keycloak_data:
